force-app/main/default/objects/Payment_Request__c/Payment_Request__c.object-meta.xml
<CustomObject>
    <label>Payment Request</label>
    <nameField>
        <displayFormat>PR{000000}</displayFormat>
        <label>Payment Request ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Request</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>