force-app/main/default/objects/Payment_Request__c/fields/Payment_Currency__c.field-meta.xml
<CustomField>
    <fullName>Payment_Currency__c</fullName>
    <label>Payment Currency</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Currency</valueSetName>
    </valueSet>
</CustomField>