force-app/main/default/objects/Payment_Request__c/fields/Payment_to__c.field-meta.xml
<CustomField>
    <fullName>Payment_to__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment to</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Payment Request</relationshipLabel>
    <relationshipName>Payment_Request1</relationshipName>
    <type>Lookup</type>
</CustomField>