force-app/main/default/objects/Payment_Request__c/fields/Paymentdeadline__c.field-meta.xml
<CustomField>
    <fullName>Paymentdeadline__c</fullName>
    <inlineHelpText>Hạn cuối cùng phải thanh toán</inlineHelpText>
    <label>Payment deadline</label>
    <required>true</required>
    <type>Date</type>
</CustomField>