force-app/main/default/objects/Payment_Request__c/fields/Total_Credit__c.field-meta.xml
<CustomField>
    <fullName>Total_Credit__c</fullName>
    <inlineHelpText>Rollup from All Connect Bill record which have record type equal Payment</inlineHelpText>
    <label>Total Credit</label>
    <summarizedField>Connectbill__c.Request_Payment_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Connectbill__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Connect Payment</value>
    </summaryFilterItems>
    <summaryForeignKey>Connectbill__c.Payment_Request__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>