force-app/main/default/objects/Payment_Request__c/fields/Total_Debit__c.field-meta.xml
<CustomField>
    <fullName>Total_Debit__c</fullName>
    <inlineHelpText>Rollup from All Connect Bill record which have record type equal Connect Invoice</inlineHelpText>
    <label>Total Debit</label>
    <summarizedField>Connectbill__c.Requested_Deduction_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Connectbill__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Connect Invoice</value>
    </summaryFilterItems>
    <summaryForeignKey>Connectbill__c.Payment_Request__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>