force-app/main/default/objects/Payment_Request__c/fields/Total_Paid_USD__c.field-meta.xml
<CustomField>
    <fullName>Total_Paid_USD__c</fullName>
    <label>Total Paid USD</label>
    <summarizedField>Connectbill__c.Total_Paid_USD__c</summarizedField>
    <summaryForeignKey>Connectbill__c.Payment_Request__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>